src/test/ui/error-codes/E0088.stderr
error[E0088]: wrong number of lifetime arguments: expected 0, found 1
  --> $DIR/E0088.rs:15:5
   |
LL |     f::<'static>(); //~ ERROR E0088
   |     ^^^^^^^^^^^^ unexpected lifetime argument

error[E0088]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/E0088.rs:16:5
   |
LL |     g::<'static, 'static>(); //~ ERROR E0088
   |     ^^^^^^^^^^^^^^^^^^^^^ unexpected lifetime argument

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0088`.
